All_Component_DX/force-app/main/default/objects/PM_Schedule_Template__c/PM_Schedule_Template__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Time based schedules for PM Plan Template are defined here.</description>
    <label>PM Schedule Template</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PM Schedule Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>