All_Component_DX/force-app/main/default/objects/PM_Schedule_Template__c/fields/PM_Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>PM_Plan_Template__c</fullName>
    <label>PM Plan Template</label>
    <referenceTo>PM_Plan_Template__c</referenceTo>
    <relationshipLabel>PM Schedule Templates</relationshipLabel>
    <relationshipName>PM_Schedule_Templates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>