All_Component_DX/force-app/main/default/objects/PM_Schedule_Template__c/fields/Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Type__c</fullName>
    <label>Schedule Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Time Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>