All_Component_DX/force-app/main/default/objects/PM_Schedule_Template__c/fields/SM_Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>SM_Adjustment_Type__c</fullName>
    <description>Type of adjustment for condition based PM - Fixed or Actual</description>
    <inlineHelpText>Type of adjustment for condition based PM</inlineHelpText>
    <label>Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Actual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>