All_Component_DX/force-app/main/default/objects/PM_Schedule_Template__c/fields/SM_Attr_Data_type__c.field-meta.xml
<CustomField>
    <fullName>SM_Attr_Data_type__c</fullName>
    <description>Data type of Attribute chosen, used for internal purpose</description>
    <inlineHelpText>Data type of Attribute chosen, used for internal purpose</inlineHelpText>
    <label>Attr Data type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>