All_Component_DX/force-app/main/default/objects/PM_Schedule_Template__c/fields/SM_Attribute_Type__c.field-meta.xml
<CustomField>
    <fullName>SM_Attribute_Type__c</fullName>
    <description>Type of attribute in Condition Based PM - Schema also refers to fields on Installed Product or Technical also refers to technical attributes</description>
    <inlineHelpText>Type of attribute in Condition Based PM - Schema also refers to fields on Installed Product or Technical also refers to technical attributes</inlineHelpText>
    <label>Attribute Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Schema</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>