All_Component_DX/force-app/main/default/objects/PM_Schedule_Template__c/fields/Work_Order_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Purpose__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order Purpose</label>
    <referenceTo>Task_Template__c</referenceTo>
    <relationshipLabel>PM Schedule Templates</relationshipLabel>
    <relationshipName>PM_Schedule_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>